Remove page content id to force viewport alignment issues to subside (with fingers crossed)

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -27,6 +27,3 @@
   height: 500px;
 }
 
-#page-content {
-  background-color: color(srgb 1 1 1 / 0.669) !important;
-}
